Time: 7 ms (40.27%) | Memory: 45.6 MB (18.75%) - LeetSync